fix wa button mobile

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ blockquote{
 }
 @media (max-width:768px){
     .whatsapp-button{
-        width: 3em;
+        width: 2em;
     }
     .hero-section{
         padding-top: 120px;
